kubernetes/argo/manifests/crossplane.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: crossplane-system
