kubernetes/argo/manifests/envoy-gateway.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: envoy-gateway
