kubernetes/argo/manifests/external-dns.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: external-dns
