kubernetes/argo/manifests/postgres.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: postgres
