kubernetes/argo/manifests/tailscale.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tailscale
