kubernetes/argo/manifests/cilium.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: kube-system
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-http
  namespace: kube-system
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: ingress-nginx-internal
  rules:
    - host: hubble.nahops.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hubble-ui
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-grpc
  namespace: kube-system
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: ingress-nginx-internal
  rules:
    - host: hubble.nahops.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hubble-ui
                port:
                  number: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: kube-system
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "hubble.nahops.co.uk"
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: GRPCRoute
# metadata:
#   name: hubble
#   namespace: kube-system
#   annotations:
#     argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
# spec:
#   parentRefs:
#   - name: internal
#     namespace: gateway
#     sectionName: https
#   hostnames:
#   - "hubble.nahops.co.uk"
#   rules:
#   - backendRefs:
#     - name: hubble-ui
#       port: 80
