kubernetes/argo/manifests/kube-system.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: kube-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: kube-system
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  parentRefs:
    - name: default # change me to internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "hubble.nahops.co.uk"
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
