kubernetes/argo/manifests/mailpit.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: mailpit
---
apiVersion: v1
kind: Service
metadata:
  name: mailpit
  namespace: mailpit
  labels:
    app.kubernetes.io/instance: mailpit
    app.kubernetes.io/name: mailpit
    app.kubernetes.io/service: mailpit
spec:
  type: ClusterIP
  ports:
    - port: 8025
      targetPort: 8025
      protocol: TCP
      name: http
    - port: 1025
      targetPort: 1025
      protocol: TCP
      name: smtp
  selector:
    app.kubernetes.io/component: mailpit
    app.kubernetes.io/instance: mailpit
    app.kubernetes.io/name: mailpit
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailpit
  namespace: mailpit
  labels:
    app.kubernetes.io/component: mailpit
    app.kubernetes.io/instance: mailpit
    app.kubernetes.io/name: mailpit
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: mailpit
      app.kubernetes.io/name: mailpit
      app.kubernetes.io/instance: mailpit
  template:
    metadata:
      labels:
        app.kubernetes.io/component: mailpit
        app.kubernetes.io/instance: mailpit
        app.kubernetes.io/name: mailpit
    spec:
      containers:
        - env:
            - name: TZ
              value: "Europe/London"
            - name: MP_SMTP_AUTH_ACCEPT_ANY
              value: "1"
            - name: MP_SMTP_AUTH_ALLOW_INSECURE
              value: "1"
          name: mailpit
          image: ghcr.io/axllent/mailpit:v1.31.4
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mailpit
  namespace: mailpit
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
    # - name: external
    #   namespace: gateway
    #   sectionName: https
  hostnames:
    - "mailpit.nahops.co.uk"
  rules:
    # - matches:
    #     - path:
    #         type: PathPrefix
    #         value: /
    - backendRefs:
        - name: mailpit
          port: 8025
