kubernetes/argo/manifests/monitoring.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: observability
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: observability
spec:
  ingressClassName: ingress-nginx-internal
  rules:
    - host: grafana.<domain>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
    - name: external
      namespace: gateway
      sectionName: https
  hostnames:
    - "grafana.<domain>"
  rules:
    - backendRefs:
        - name: grafana
          port: 80
